k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-default
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flask-ingress
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: flask-app
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 5000
          protocol: TCP
